--- a/tft_training.ipynb
+++ b/tft_training.ipynb
@@ -538,6 +538,7 @@
     "    training,\n",
     "    mode=\"raw\",\n",
     "    return_x=True,\n",
+    "    \n",
     ")"
    ]
   },
@@ -642,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -674,6 +675,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "QuantileLoss(quantiles=[0.02, 0.1, 0.25, 0.5, 0.75, 0.9, 0.98])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -682,7 +693,8 @@
     "    best_tft.plot_prediction(x, raw_predictions, idx=idx, add_loss_to_title=True)\n",
     "    # plt.show only the first 100 samples\n",
     "    plt.xlim(-50, 50)\n",
-    "    plt.show()\n"
+    "    plt.show()\n",
+    "\n"
    ]
   },
   {
@@ -813,6 +825,33 @@
     "smape = smape(transactions, predicted_transactions)\n",
     "\n",
     "print(f'MSE: {mse:.2f}, MAE: {mae:.2f}, SMAPE: {smape:.2f}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(26.2027)"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the quantile loss of the model\n",
+    "#best_tft.loss\n",
+    "from pytorch_forecasting.metrics import QuantileLoss\n",
+    "\n",
+    "loss_fn = QuantileLoss()\n",
+    "loss = loss_fn(predicted_transactions, transactions)\n",
+    "\n",
+    "loss"
    ]
   }
  ],
