--- a/Baselines.ipynb
+++ b/Baselines.ipynb
@@ -22,13 +22,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from pytorch_forecasting import Baseline, TemporalFusionTransformer, TimeSeriesDataSet\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torch.utils.data import Dataset\n",
+    "import torch\n",
     "\n",
-    "from pytorch_forecasting.data import GroupNormalizer\n",
-    "\n",
-    "from ipynb.fs.full.training_preprocessing import GetDataset"
+    "from ipynb.fs.full.training_preprocessing import get_dataset"
    ]
   },
   {
@@ -373,7 +369,7 @@
     }
    ],
    "source": [
-    "df = GetDataset()\n",
+    "df = get_dataset()\n",
     "df"
    ]
   },
@@ -391,15 +387,11 @@
     }
    ],
    "source": [
-    "# Given range, see how close the mean of previous 2 weeks and next 2 weeks is to the actual value\n",
-    "# Moving average\n",
-    "\n",
     "date_to_predict = pd.to_datetime('2022-10-20 10:00:00')\n",
     "\n",
     "\n",
     "df['Timestamp'] = pd.to_datetime(df['Timestamp'])\n",
     "\n",
-    "# Get the transaction_count values from the last week of df\n",
     "prev_week_1 = df[(df['Timestamp'] >= date_to_predict - pd.Timedelta(days=7)) & (df['Timestamp'] < date_to_predict)]['transaction_count']\n",
     "prev_week_2 = df[(df['Timestamp'] >= date_to_predict - pd.Timedelta(days=15)) & (df['Timestamp'] < date_to_predict - pd.Timedelta(days=7))]['transaction_count']\n",
     "\n",
@@ -408,15 +400,10 @@
     "\n",
     "actual_week = df[(df['Timestamp'] >= date_to_predict) & (df['Timestamp'] < date_to_predict + pd.Timedelta(days=7))]['transaction_count']\n",
     "\n",
-    "# For each field in last_2_weeks and next_2_weeks, get the mean between them \n",
-    "# and store it in a new dataframe\n",
     "predicted_with_means = []\n",
     "for i in range (len(prev_week_1)):\n",
-    "    # Append to df2\n",
     "    predicted_with_means.append((prev_week_1.iloc[i] + prev_week_2.iloc[i] + next_week_1.iloc[i] + next_week_2.iloc[i]) / 4)\n",
     "\n",
-    "\n",
-    "# Get the mean absolute error between the actual values and the predicted values\n",
     "mae = mean_absolute_error(actual_week, predicted_with_means)\n",
     "print(f'Mean Absolute Error: {mae}')"
    ]
@@ -466,7 +453,6 @@
     }
    ],
    "source": [
-    "# Calculate the Mean Squared Error\n",
     "mse = mean_squared_error(actual_week, predicted_with_means)\n",
     "\n",
     "print(f'Mean Squared Error: {mse}')"
@@ -489,7 +475,6 @@
     }
    ],
    "source": [
-    "import torch\n",
     "actual_week_ar = np.array(actual_week)\n",
     "\n",
     "dist = torch.dist(torch.FloatTensor(actual_week_ar), torch.FloatTensor(predicted_with_means))\n",
@@ -550,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "orig_nbformat": 4,
   "vscode": {
