--- a/OtherModels/model-trainer.ipynb
+++ b/OtherModels/model-trainer.ipynb
@@ -42,7 +42,7 @@
     "# Import modules from parent directory\n",
     "sys.path.insert(0,'..')\n",
     "\n",
-    "from ipynb.fs.full.training_preprocessing import GetDataset"
+    "from ipynb.fs.full.training_preprocessing import get_dataset"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = GetDataset()"
+    "df = get_dataset()"
    ]
   },
   {
@@ -60,15 +60,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set x equal to all columns except for the transaction_count and workforce_type_1\n",
     "x = df.drop(['transaction_count', 'workforce_type_1','workforce_type_2', 'workforce_type_3','workforce_type_4'], axis=1)\n",
-    "# convert x to a 2d array\n",
     "x = x.values.tolist()\n",
     "\n",
-    "\n",
-    "# set y equal to the transaction_count and workforce_type_1 columns\n",
     "y = df[['transaction_count', 'workforce_type_1', 'workforce_type_2', 'workforce_type_3','workforce_type_4']]\n",
-    "# convert y to an array\n",
     "y = y.values.tolist()"
    ]
   },
@@ -105,12 +100,9 @@
     "\n",
     "    for epoch in range(num_epochs):\n",
     "        for inputs, targets in train_loader:\n",
-    "            # Forward pass\n",
     "            outputs = model(inputs)\n",
-    "            # Compute loss\n",
     "            loss = criterion(outputs, targets)\n",
     "\n",
-    "            # Backward pass and optimization\n",
     "            scheduler.optimizer.zero_grad()\n",
     "            loss.backward()\n",
     "            scheduler.optimizer.step()\n",
@@ -118,12 +110,9 @@
     "        scheduler.step(loss)\n",
     "        print(scheduler.optimizer.param_groups[0]['lr'])\n",
     "\n",
-    "        # check if the current model has the lowest loss\n",
     "        if loss < lowest_loss:\n",
-    "            # update the lowest loss variable\n",
     "            lowest_loss = loss\n",
     "            \n",
-    "            # save the current model checkpoint\n",
     "            checkpoint = {\n",
     "                'epoch': epoch,\n",
     "                'model_state_dict': model.state_dict(),\n",
@@ -133,8 +122,8 @@
     "            torch.save(checkpoint, 'saved/bestModelChkpt.pt')\n",
     "            torch.save(model.state_dict(), 'saved/bestModel.pt')\n",
     "            \n",
-    "        # Print progress\n",
-    "        print('Epoch [{}/{}], Loss: {:.4f}'.format(epoch+1, num_epochs, loss.item()))\n"
+    "\n",
+    "        print('Epoch [{}/{}], Loss: {:.4f}'.format(epoch+1, num_epochs, loss.item()))"
    ]
   },
   {
@@ -152,7 +141,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hyperparameters\n",
     "LEARNING_RATE = 0.001\n",
     "EPOCHS = 10000"
    ]
@@ -226,8 +214,6 @@
     }
    ],
    "source": [
-    "# Save the torch model\n",
-    "# Load the best model\n",
     "#model = MultiLabelRegression(11, 5)\n",
     "model = MultiLayerMultiLabelRegression(11,5)\n",
     "\n",
@@ -253,7 +239,6 @@
     }
    ],
    "source": [
-    "# Get the model loss\n",
     "model_loss = modelChkpt['loss']\n",
     "model_loss"
    ]
@@ -5283,8 +5268,8 @@
     }
    ],
    "source": [
-    "Xtest = torch.FloatTensor(X_test)\n",
-    "test_loader = DataLoader(dataset=Xtest, batch_size=1)\n",
+    "X_test = torch.FloatTensor(X_test)\n",
+    "test_loader = DataLoader(dataset=X_test, batch_size=1)\n",
     "\n",
     "# Set the model to eval mode and generate a list of predictions for the test data\n",
     "model.eval()\n",
@@ -5390,10 +5375,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Graph the predictions vs the actual values\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "#plt.scatter(transaction_count_predictions, transaction_count_actuals, alpha=0.5)\n",
     "plt.plot(transaction_count_actuals[200:600], label='Actual')\n",
     "plt.plot(transaction_count_predictions[200:600], label='Predicted')\n",
     "plt.xlabel('Data Point Index')\n",
@@ -5420,7 +5403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "orig_nbformat": 4,
   "vscode": {
