--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -6,8 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
@@ -19,9 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load from s3 instead?\n",
-    "df = pd.read_csv('./Data/xMonths_SimulatedStaff.csv')\n",
-    "#../"
+    "df = pd.read_csv('./Data/xMonths_SimulatedStaff.csv')"
    ]
   },
   {
@@ -688,13 +684,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
