--- a/training_preprocessing.ipynb
+++ b/training_preprocessing.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dateTime = pd.to_datetime(df['Timestamp']).dt"
+    "date_time = pd.to_datetime(df['Timestamp']).dt"
    ]
   },
   {
@@ -37,46 +37,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "#TODO!\n",
-    "\n",
-    "# No missing dates so we're just setting the time_idx equal to index. Should probably add some mathematical func here\n",
-    "# used to determine the sequence of samples.\n",
-    "# If no missing observations, the time index should increase by +1 for each subsequent sample. \n",
-    "\n",
-    "\n",
-    "#startOfData = dateTime[0]\n",
-    "\n",
-    "# given that each sample is 9 hours, calculate how long it has been since the first sample\n",
-    "# i.e.\n",
-    "# 31/05/2021 17:00\t= 0\n",
-    "# 31/05/2021 18:00\t= 1\n",
-    "# 01/06/2021 10:00\t= 2\n",
-    "# 01/06/2021 11:00\t= 3\n",
-    "\n",
-    "\n",
-    "# get the total seconds of dateTime\n",
-    "\n",
-    "\n",
-    "\n",
-    "#time_elapsed = dateTime. - startOfData\n",
-    "#hours_elapsed = time_elapsed.total_seconds() / 3600\n",
-    "#intervals_elapsed = hours_elapsed / 9\n",
-    "\n",
-    "#df[\"time_idx\"] = intervals_elapsed\n",
-    "\n",
-    "# Convert time elapsed to a duration object in hours\n",
-    "\n",
-    "# Calculate the number of 9-hour intervals\n",
-    "\n",
-    "\n",
-    "#print(f\"First date: {startOfData}\")\n",
-    "#df[\"time_idx\"].head(15)\n",
-    "\n",
-    "# Print the rows where time_idx does not increase by 1\n",
-    "#df[df[\"time_idx\"] != df[\"time_idx\"].shift(1) + 1]\n",
-    "#df.head(1)\n",
-    "#df[133:137]\n",
     "df[\"time_idx\"] = df.index"
    ]
   },
@@ -100,10 +60,10 @@
    "outputs": [],
    "source": [
     "# Add year, month, day, and hour columns\n",
-    "df[\"year\"] = dateTime.year\n",
-    "df[\"month\"] = dateTime.month\n",
-    "df[\"day\"] = dateTime.day\n",
-    "df[\"hour\"] = dateTime.hour\n",
+    "df[\"year\"] = date_time.year\n",
+    "df[\"month\"] = date_time.month\n",
+    "df[\"day\"] = date_time.day\n",
+    "df[\"hour\"] = date_time.hour\n",
     "\n",
     "#df.head(10)"
    ]
@@ -136,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# convert constant_group to numerical value, not used by tft\n",
+    "# convert constant_group to numerical value, not used by tft only by custom models\n",
     "#le = preprocessing.LabelEncoder()\n",
     "#df['constant_group'] = le.fit_transform(df['constant_group']) #Uncomment for other models!\n",
     "#df['holiday'] = le.fit_transform(df['holiday'])"
@@ -459,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def GetDataset():\n",
+    "def get_dataset():\n",
     "    return df"
    ]
   }
@@ -480,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "orig_nbformat": 4,
   "vscode": {
